logo dimensions fix

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -11,7 +11,7 @@ const { lang = "cs" } = Astro.props as Props;
     {
       lang === "en"
         ? "Do you know how your marketing campaigns really perform?"
-        : "Víte, jak vám skutečně fungují marketingové akce?"
+        : "Víte, jak vám skutečně fungují marketingové kampaně?"
     }
   </h2>
 
